# drones

./: .gitignore  CMakeLists.txt  README.md
data/: config.conf
src/: drones.h  game_init.c  main.c
